Add logo delete feature, clean up LWC, update APEX Unit tests

--- a/force-app/main/default/classes/GGW_ExportCtrl.cls
+++ b/force-app/main/default/classes/GGW_ExportCtrl.cls
@@ -11,10 +11,12 @@ public without sharing class GGW_ExportCtrl {
     public String recordId {get; set;}
     public String appName {get;set;}
     public String logoURL {get; set;}
+    public Boolean isDisplayLogo {get; set;}
     public List<GGW_Selected_Item__c> items {get; set;}
     private final GGW_Grant_Application__c app;
 
     public GGW_ExportCtrl(ApexPages.StandardController stdController) {
+        this.isDisplayLogo = false;
         this.app = (GGW_Grant_Application__c)stdController.getRecord();
         if(this.app != null && this.app.Id != null){
             this.recordId = this.app.Id;
@@ -36,6 +38,9 @@ public without sharing class GGW_ExportCtrl {
             GGW_Grant_Application__c app = GGW_Util.queryGrantApp(this.recordId.escapeHtml4());
             if(app != null && app.Logo_Download_Url__c != null){
                 this.logoURL = app.Logo_Download_Url__c;
+                if(app.Include_Logo__c == true){
+                    this.isDisplayLogo = true;
+                }
             }
         
             this.items = GGW_Util.getSelectedItems(this.recordId.escapeHtml4());
